<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>
    <string name="activity_new_neighbour">New neighbour</string>
    <string name="title_activity_neighbour_details">NeighbourDetailsActivity</string>
    <string name="neighbour_key">neighbour</string>
    <string name="about_me">A propos de moi</string>
    <string name="title_item_neighbour">Neighbour</string>
    <string name="title_item_favorite">Favorites</string>

</resources>

